feat(api): add http service (#45)
